# lipl

./: CoreLib.html  Error.html  EvalMonad.html  EvalMonadClass.html  Evaluator.html  LICENSE  LangData.html  LangUtils.html  Main.html  MainUtils.html  ParseUtils.html  Parser.html  PosMonad.html  PosMonadClass.html  README.rst  README.txt  REPLMonad.html  Settings.html  Setup.lhs  Stack.html  TCheck.html  TIMonad.html  TIMonadClass.html  TParse.html  Type.html  Utils.html  calc.html  core.html  index.html  langref.html  lipl.cabal  tutorial.html
doc/: default.tex  index.txt  l2p.sh  langref.txt  lipl.html  lipl.txt  midterm_report.txt  pre.tex  tohtml.sh  topdf.sh  tutorial.txt
doc/tools/: Demo.lhs  default.tex  gen.py  gendoc.py  gendoc.sh  lhs2html.py  print.css  style.css
doc/tools/pah/: __init__.py  style.css  template.html
examples/: calc.lipl
lib/: calc.lipl  core.lipl  joy.lipl
src/: CoreLib.hs  CoreLib.lhs  Error.hs  Error.lhs  EvalMonad.hs  EvalMonad.lhs  EvalMonadClass.hs  EvalMonadClass.lhs  EvalUtils.hs  EvalUtils.lhs  Evaluator.hs  Evaluator.lhs  LangData.hs  LangData.lhs  LangUtils.lhs  Lexer.hs  Main.hs  Main.lhs  MainUtils.hs  MainUtils.lhs  Makefile  PPrint.hs  ParseUtils.hs  ParseUtils.lhs  Parser.hs  Parser.lhs  PosMonad.hs  PosMonad.lhs  PosMonadClass.hs  PosMonadClass.lhs  REPLMonad.hs  REPLMonad.lhs  Settings.hs  Settings.lhs  Stack.hs  Stack.lhs  StdLib.hs  TCheck.hs  TCheck.lhs  TIMonad.hs  (+16 more)
src/Lipl/: Interpreter.hs  Repl.hs
src/skatch/: dep.hs
src/sketch/: dep.hs  lipl.hs  t.hs
test/: tcheck_test.hs
