Name: Lipl
Version: 0.1
Cabal-Version: >= 1.2
License: OtherLicense
License-File: LICENSE
Author: Samuel Lee
Description: A small functional language interpreter.
Data-Files: lib/core.lipl, lib/calc.lipl

Executable: lipl
Main-is: Main.hs
Hs-Source-Dirs: src
Build-Depends: base, parsec, containers, filepath
    , pretty, mtl, directory
